# enohub

./: .env.example  .gitignore  .gitmodules  404.html  Dockerfile  Dockerfile.nginx  README.md  config.yaml  docker-compose.yml  example-config.yaml  example-config.yml  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-image.yml  docker-publish.yml
compose/grafana/dashboards/: main-dashboard.json
compose/grafana/provisioning/dashboards/: default.yaml
compose/grafana/provisioning/datasources/: datasource.yml
compose/nginx/: nginx.conf
compose/timescaledb/: init.sql
docs/: 404.html  index.html  index.md
docs/configuration/: index.html
docs/dashboard/: index.html
docs/installation/: index.html
docs/integration/: index.html
docs/search/: search_index.json
enohub/: __main__.py  cli.py  config.py  db.py  hub.py  serial.py
markdown/: configuration.md  dashboard.md  grafana.md  index.md  installation.md  integration.md
resources/: example-dashboard.json
